tests/__snapshots__/config-fixtureFileMatch-specified-patterns-stderr.snap.txt
Error: Type 'number' is not assignable to type 'string'. ts(2322)

  1 | export const x: string = 10;
    |              ~
  2 | 

      at ./__typetests__/__fixtures__/a.ts:1:14

Error: Type 'number' is not assignable to type 'string'. ts(2322)

  1 | export const x: string = 10;
    |              ~
  2 | 

      at ./__typetests__/fixtures/b.ts:1:14

Error: Type 'number' is not assignable to type 'string'. ts(2322)

  1 | export const x: string = 10;
    |              ~
  2 | 

      at ./type-tests/__fixtures__/a.ts:1:14

Error: Type 'number' is not assignable to type 'string'. ts(2322)

  1 | export const x: string = 10;
    |              ~
  2 | 

      at ./type-tests/fixtures/b.ts:1:14

Error: Type 'number' is not assignable to type 'string'. ts(2322)

  1 | export const x: string = 10;
    |              ~
  2 | 

      at ./typetests/__fixtures__/a.ts:1:14

Error: Type 'number' is not assignable to type 'string'. ts(2322)

  1 | export const x: string = 10;
    |              ~
  2 | 

      at ./typetests/fixtures/b.ts:1:14

